# sqrisland

./: CMakeLists.txt  PXML.xml  README.md  licenses.txt  run.sh
dat/: settings.conf
dat/interface/: coincount.ani  lifecount.ani  textbox.ani
dat/items/: coin.ani  life.ani  upgrader.ani
dat/levels/: 0.tmx  1.tmx  2.tmx  3.tmx  4.tmx  5.tmx  base.tmx  tiles.tsx
dat/player/: bullet.ani
dat/scenes/: gamefinished.ani  gameover.ani
dat/texts/: almost_over.xml  map01.xml
src/: AnimationManager.cpp  AnimationManager.hpp  Background.cpp  Background.hpp  BouncingEnemy.cpp  BouncingEnemy.hpp  Bullet.cpp  Bullet.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  ContainerTile.cpp  ContainerTile.hpp  Corpse.cpp  Corpse.hpp  DamagingTile.cpp  DamagingTile.hpp  Effect.cpp  Effect.hpp  Enemy.cpp  Enemy.hpp  Event.cpp  Event.hpp  EventArea.cpp  EventArea.hpp  FragileTile.cpp  FragileTile.hpp  Gravity.cpp  Gravity.hpp  Intro.cpp  Intro.hpp  Item.cpp  Item.hpp  Jump.cpp  Jump.hpp  Level.cpp  Level.hpp  LevelInterface.cpp  LevelInterface.hpp  LevelIntro.cpp  (+38 more)
src/bullets/: Player.cpp  Player.hpp  bullets.hpp
src/corpses/: Egg.cpp  Egg.hpp  Kite.cpp  Kite.hpp  Punk.cpp  Punk.hpp  Tri.cpp  Tri.hpp  corpses.hpp
src/enemies/: Egg.cpp  Egg.hpp  Kite.cpp  Kite.hpp  Punk.cpp  Punk.hpp  Tri.cpp  Tri.hpp  enemies.hpp
src/events/: Checkpoint.cpp  Checkpoint.hpp  ObjectiveReached.cpp  ObjectiveReached.hpp  Textbox.cpp  Textbox.hpp  events.hpp
src/items/: Coin.cpp  Coin.hpp  Life.cpp  Life.hpp  Upgrader.cpp  Upgrader.hpp  items.hpp
src/level/: collision.cpp  load.cpp  move.cpp  (+1 more)
(+64 files in other folders)
